--- a/PracticaFinal/memoria/bibliografia.bib
+++ b/PracticaFinal/memoria/bibliografia.bib
@@ -58,3 +58,35 @@
   month =    jul,
   year =     2013
 }
+
+@Misc{friends,
+  author =   {Yann LeCun @ylecun},
+  title =    {Twitter Yann LeCun},
+  howpublished = {\url{https://twitter.com/ylecun/status/989610208497360896?}},
+  month =    apr,
+  year =     2018
+}
+
+@Misc{tf,
+  author =   {Tensorflow},
+  title =    {Word embeddings},
+  howpublished = {\url{https://www.tensorflow.org/tutorials/text/word_embeddings}},
+  month =    mar,
+  year =     2020
+}
+
+@Misc{summarySapiens,
+  author =   {Dean Bokhari},
+  title =    {Sapiens by Yuval Noah Harari : Book Summary},
+  howpublished = {\url{https://www.deanbokhari.com/sapiens/}},
+  month =    sep,
+  year =     2018
+}
+
+@Misc{summaryNameWind,
+  author =   {Wikipedia},
+  title =    {The Name of the Wind: Plot},
+  howpublished = {\url{https://en.wikipedia.org/wiki/The_Name_of_the_Wind#Plot}},
+  month =    dec,
+  year =     2020
+}
