--- a/PracticaFinal/memoria/PRACTICA_FINAL_GRUPO_01.tex
+++ b/PracticaFinal/memoria/PRACTICA_FINAL_GRUPO_01.tex
@@ -450,6 +450,8 @@ Las conclusiones a las que se llegan son:
 
 Por tanto se concluye con que el mejor experimento es el \textbf{Exp. 15}, con un \textit{accuracy} en test de \textbf{23,14\%}. Este valor no es especialmente alto pero, dada la complejidad del problema, se puede considerar como un éxito.
 
+\newpage
+
 \subsection{Caso de uso}
 En esta subsección se dispone un caso de uso real del sistema desarrollado con el objetivo de mostrar de una forma concreta la utilidad real del modelo que se de describe en este documento. Para ello, se seleccionarán dos libros de manera aleatoria obtenidos de internet y se le pasarán a la red implementada de tal manera que se simule la situación de un bibliotecario al cual le llegan estos dos escritos:
 
